--- a/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
+++ b/PPl3/Areas/Host/Views/HomeHost/Listing.cshtml
@@ -85,6 +85,7 @@
                                 <li><a href="/user/homeuser/index">Switch to guest</a></li>
                                 <li><a href="/user/homeuser/profile?id=@p_user.id">Account</a></li>
                                 <li><a href="/user/homeuser/userPersonalProfile">Host Profile</a></li>
+                                <li><a href="/host/homehost/revenue">Revenue</a></li>
                                 <li><a href="#">Help Center</a></li>
                                 <li class="user_log_out"><a href="/user/homeuser/Logout">Log out</a></li>
                             </ul>
